# tool

./: backup.sh  memo.sh  set_conf  switchdisp.sh
generator/: CMakeLists.txt  gen.sh  make.sh  rtc.conf
